# VividRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt
samples/sample_render_fbx/: CMakeLists.txt  sample_render_fbx.cpp
samples/sample_render_obj/: CMakeLists.txt  sample_render_obj.cpp
samples/sample_texture_triangle/: CMakeLists.txt  sample_texture_triangle.cpp
shaders/: phong.frag  phong.vert  simple.frag  simple.vert
src/: Camera.h  ClearPass.cpp  ClearPass.h  CommandBuffer.h  CommandQueue.h  Device.h  IGLResource.h  IRenderResource.h  Model.cpp  Model.h  ModelPass.cpp  ModelPass.h  OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  Pipeline.cpp  Pipeline.h  RenderGraph.cpp  RenderGraph.h  RenderGraphDefs.h  RenderPass.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TexturedTrianglePass.cpp  TexturedTrianglePass.h  TrianglePass.cpp  TrianglePass.h  VertexBuffer.h  main.cpp
